fixed small spacing issue with header box

--- a/src/Components/Molecules/LeftHeadingText/LeftHeadingText.scss
+++ b/src/Components/Molecules/LeftHeadingText/LeftHeadingText.scss
@@ -1,7 +1,8 @@
 #outerContainer {
 
     &.desktop {
-        width: 600px;
+        width: auto;
+        max-width: 900px;
         max-height: 300px;
         min-height: 150px;
         display: flex;
@@ -10,7 +11,7 @@
     }
 
     &.mobile {
-        height: 480px;
+        // height: 480px;
         padding: 20px;
     }
 
@@ -51,7 +52,7 @@
     }
 
     &.mobile {
-        height: 70%;
+        height: auto;
         width: 100%;
     }
 }
